--- a/src/pages/Main/Components/Navbar.css
+++ b/src/pages/Main/Components/Navbar.css
@@ -1,15 +1,9 @@
-.navbar {
+div.navbar {
   background-color: #060b26;
   height: 80px;
   display: flex;
   justify-content: start;
   align-items: center;
-}
-
-.menu-bars {
-  margin-left: 2rem;
-  font-size: 2rem;
-  background: none;
 }
 
 .nav-menu {
@@ -24,7 +18,7 @@
   transition: 850ms;
 }
 
-.nav-menu.active {
+nav.nav-menu.active {
   left: 0;
   transition: 350ms;
 }
@@ -55,12 +49,12 @@
 
 }
 
-.nav-menu-items {
+ul.nav-menu-items {
   width: 100%;
 
 }
 
-.navbar-toggle {
+li.navbar-toggle {
   background-color: #060b26;
   width: 100%;
   height: 80px;
