--- a/src/components/AdminUI/datatable.scss
+++ b/src/components/AdminUI/datatable.scss
@@ -74,5 +74,12 @@
       border: 1px dotted rgba(220, 20, 60, 0.6);
       cursor: pointer;
     }
+    .shareButton {
+      padding: 2px 5px;
+      border-radius: 5px;
+      color: rgba(8, 177, 73, 0.596);
+      border: 1px dotted rgba(8, 177, 73, 0.596);
+      cursor: pointer;
+    }
   }
 }
